namespace CoreService.Test.Simulation
{
    internal interface IActionResult<T>
    {
    }
}